modificado SaleDetail y Sale para no tener loops infinitos por relacion bidireccional como en el caso de store; modificado el insert de estos dos casos para no tener que realizar dos consultas; agregados indices unicos para  cada entidad, para evitar insertar documentos duplicados; modificado gitignore para ignorar los outputs de datos en archivos json

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,11 @@ buildNumber.properties
 lib/*
 .settings/*
 .vscode/*
+addresses.json
+stores.json
+items.json
+clients.json
+sales.json
+employees.json
+saleDetails.json
+
